Redundancy reduction (#495)
* Replace !Optional.isPresent() with Optional.isEmpty()
* Replace manual min/max calculations
* Replace redundant Collection operation
* Replace redundant File instance creation
* Replace redundant String operations
* Replace redundant type arguments
* Remove redundant type casts
* Simplify Stream call chains
* Remove unnecessary return statements
* Replace StringBuilders
* Duplicate Line

---------

Co-authored-by: valentin <gitea@brueckel.org>
Co-authored-by: Thomas Bayer <bayer@predic8.de>